--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
+    "downloadjs": "^1.4.7",
+    "html-to-image": "^1.11.11",
     "next": "13.3.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
